# im-not-notion

./: .gitignore  .gitmodules  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
docs/: README.md  SERVER_SETUP_GUIDE.md  TODO.md
docs/guide/: GETTING_STARTED.md  PLUGINS.md
docs/internal/: ARCHITECTURE.md  IMAGE_SYNC.md  IPC_API.md  MOVE_CONTENT_OPTIMIZATION.md  PLUGIN.md  PTY_VIM_FREEZE_FIX.md
src/: App.svelte  FileControlSection.svelte  MainContent.svelte  SettingsButton.svelte  SettingsPopup.svelte  Sidebar.svelte  TopBar.svelte  TreeNode.svelte  context.ts  main.ts  shortcut.ts  stores.ts  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  main.rs  setting.rs
src-tauri/src/commands/: config_command.rs  file_command.rs  mod.rs  plugin_command.rs  pty_command.rs  setup_command.rs  ssh_command.rs  transfer_command.rs
src-tauri/src/services/: config_service.rs  file_service.rs  fs_service.rs  mod.rs  plugin_service.rs  pty_service.rs  setup_service.rs  ssh_service.rs  transfer_service.rs
src-tauri/src/ssh/: client.rs  file_management.rs  hugo_command.rs  mod.rs  sftp.rs  terminal.rs
src-tauri/src/types/: plugin.rs
src-tauri/src/types/config/: app_config.rs  client_config.rs  cms_config.rs  mod.rs  server_config.rs  server_entry.rs  ssh_config.rs
src-tauri/src/utils/: crypto.rs  error.rs  mod.rs
src/component/: DynamicField.svelte  Popup.svelte  Toast.svelte
src/content/: MainContent.svelte  SavePopup.svelte
src/resource/: InvaderClose.svelte  InvaderOpen.svelte  LogoSVG.svelte
src/sidebar/: Buttons.svelte  ConfirmModal.svelte  ConflictModal.svelte  FileControlSection.svelte  FileExplorerPopup.svelte  HugoSetup.svelte  PluginDownloadPopup.svelte  PluginInputPopup.svelte  PluginPanel.svelte  PluginProgressModal.svelte  PluginPromptModal.svelte  PluginResultPopup.svelte  ProgressModal.svelte  RebootPopup.svelte  SettingsPopup.svelte  Sidebar.svelte  TerminalPopup.svelte  TreeNode.svelte
src/sidebar/terminal/: TerminalInputController.ts
src/topbar/: TopBar.svelte
src/types/: explorer.ts  generated.ts  setting.ts  svelte-icons.d.ts  uuid.d.ts
