[package]
name = "im_not_notion"
version = "1.1.1"
description = "im_not_notion"
authors = ["dongkim"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
tauri = { version = "^2", features = [] }
tauri-plugin-shell = "2.3.0"
tauri-plugin-dialog = "2"
serde = { version = "*", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9.4"
anyhow = "1.0.80"
image = "0.25.0"
aes-gcm = "0.10.3"
base64 = "0.22.0"
time = "0.3"
sha2 = "0.10.8"
rand = "0.8.5"
once_cell = "1.19.0"
dirs-next = "2"
indexmap = { version = "2.10.0", features = ["serde"] }
typeshare = "1.0"
regex = "1"
ureq = "2"
flate2 = "1"
tar = "0.4"
walkdir = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
